--- a/FixITPagliu/app/src/main/res/layout/activity_local_statistics.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_local_statistics.xml
@@ -9,8 +9,8 @@
         android:id="@+id/svLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="35dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/bg_round"
         android:elevation="5dp"
@@ -21,18 +21,14 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:targetApi="lollipop" />
 
-    <fragment
-        android:id="@+id/mapFrag"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <com.github.mikephil.charting.charts.LineChart
+        android:layout_marginTop="100dp"
+        android:id="@+id/lineChart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/svLocation"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/svLocation"
-        app:layout_constraintVertical_bias="1.0" />
-
+        app:layout_constraintTop_toBottomOf="@id/svLocation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
