--- a/FixITPagliu/app/src/main/res/layout/activity_user_menu.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_user_menu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.fix_it_pagliuca.com.application.fix_it_pagliuca.user.dashboard.Dashboard"
+    tools:context="com.application.fix_it_pagliuca.user.dashboard.Dashboard"
     tools:openDrawer="start">
 
     <com.google.android.material.navigation.NavigationView
@@ -32,9 +32,11 @@
             android:id="@+id/emailNotVerified"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="250dp"
-            android:layout_marginLeft="250dp"
+            android:layout_alignStart="@id/profileImg"
+            android:layout_alignLeft="@id/profileImg"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:text="@string/l_e_mail_non_verificata"
             android:textColor="#c91e12"
             android:visibility="invisible" />
@@ -43,20 +45,21 @@
             android:id="@+id/resendCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/emailNotVerified"
-            android:layout_alignEnd="@+id/emailNotVerified"
-            android:layout_alignRight="@+id/emailNotVerified"
+            android:layout_alignStart="@id/emailNotVerified"
+            android:layout_alignLeft="@id/emailNotVerified"
+            android:layout_marginStart="155dp"
+            android:layout_marginLeft="155dp"
             android:layout_marginTop="10dp"
             android:text="@string/resend"
             android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/profileImg"
-            android:layout_width="500px"
-            android:layout_height="500px"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            tools:ignore="PxUsage" />
+            android:layout_marginTop="80dp"
+            android:contentDescription="@string/la_tua_foto_profilo" />
 
         <TextView
             android:id="@+id/nomeText"
