--- a/FixITPagliu/app/src/main/res/layout/post.xml
+++ b/FixITPagliu/app/src/main/res/layout/post.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="3dp"
-    android:layout_marginTop="20dp"
+    android:layout_marginTop="10dp"
     android:layout_marginRight="3dp"
     android:layout_marginBottom="10dp"
     android:background="@drawable/bg_round"
@@ -17,6 +17,7 @@
         android:text="@string/missing_object"
         android:textColor="#000000"
         android:textSize="24sp"
+        android:fontFamily="sans-serif-thin"
         android:textStyle="bold" />
 
     <TextView
@@ -27,6 +28,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:text="@string/missing_description"
+        android:fontFamily="sans-serif-smallcaps"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -38,7 +40,9 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="4dp"
+        android:fontFamily="sans-serif-thin"
         android:text="@string/missing_date"
+        android:paddingBottom="5dp"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold" />
