--- a/FixITPagliu/app/src/main/res/layout/report_open.xml
+++ b/FixITPagliu/app/src/main/res/layout/report_open.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginRight="10dp"
+    android:layout_marginLeft="3dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginRight="3dp"
     android:layout_marginBottom="10dp"
     android:background="@drawable/bg_oreport"
     android:orientation="vertical">
@@ -69,6 +69,7 @@
         android:layout_height="wrap_content"
         android:gravity="left"
         android:text="@string/missing_desc"
+        android:paddingBottom="5dp"
         app:layout_constraintLeft_toLeftOf="@id/repID"
         app:layout_constraintTop_toBottomOf="@id/repID" />
 
