--- a/FixITPagliu/app/src/main/res/layout/activity_bidir.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_bidir.xml
@@ -7,28 +7,33 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messagesRecycle"
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="660dp"
+        android:paddingTop="3dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/textToSend"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_round"
         android:hint="@string/scrivi_qualcosa"
+        android:paddingStart="5dp"
+        android:paddingLeft="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/messagesRecycle" />
 
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_round"
         android:hint="@string/invia"
         app:layout_constraintLeft_toRightOf="@+id/textToSend"
         app:layout_constraintTop_toBottomOf="@+id/messagesRecycle" />
