--- a/FixITPagliu/app/src/main/res/layout/activity_closed_reports.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_closed_reports.xml
@@ -10,7 +10,7 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="85dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:gravity="center"
         android:paddingTop="20dp"
         android:text="@string/segnalazioni_chiuse_caps"
