--- a/FixITPagliu/app/src/main/res/layout/message.xml
+++ b/FixITPagliu/app/src/main/res/layout/message.xml
@@ -1,23 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/msgBg"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginStart="3dp"
     android:layout_marginLeft="3dp"
-    android:layout_marginTop="20dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="3dp"
     android:layout_marginRight="3dp"
-    android:layout_marginBottom="10dp"
-    android:background="@drawable/bg_message"
+    android:background="@drawable/bg_message_from_employee"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/msgText"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="3dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="6dp"
+        android:maxEms="10"
+        android:paddingLeft="4dp"
+        android:paddingTop="1dp"
+        android:paddingRight="4dp"
+        android:paddingBottom="1dp"
         android:text="@string/missing_description"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
 
-</LinearLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
